# rs-nucflag

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  nucflag.toml
.github/workflows/: ci.yaml  release.yml
core/: .gitattributes  Cargo.toml  nucflag.toml
core/src/: binning.rs  classify.rs  config.rs  intervals.rs  io.rs  lib.rs  misassembly.rs  nucflag.rs  peak.rs  pileup.rs  preset.rs  repeats.rs
core/test/: test_examples.rs
core/test/dupes/: aln_1.bam.bai  aln_1.bed  aln_2.bam  aln_2.bam.bai  aln_3.bed
core/test/dupes/expected/: aln_1.bed  aln_2.bed  aln_3.bed
core/test/dupes/input/: aln_1.bed  aln_2.bed  aln_3.bed
core/test/ending_scaffold/: aln_1.bam.bai  aln_1.bed  aln_1.fa.fai
core/test/ending_scaffold/expected/: aln_1.bed
core/test/het/: aln_1.bam  aln_1.bed
core/test/het/input/: aln_1.bed  (+1 more)
core/test/minor_collapse/: aln_1.bam  aln_1.bed  aln_3.bed
core/test/misjoin/: aln_1.bam.bai  aln_1.bed
core/test/pileup/: test.bam.bai
core/test/standard/: aln.bam  aln.bam.bai
examples/: Cargo.toml  README.md
examples/scripts/: example.py
examples/src/: cli.rs  main.rs
py/: Cargo.toml  README.md  pyproject.toml
py/src/: lib.rs
src/: classify.rs  cli.rs  config.rs  draw.rs  intervals.rs  io.rs  main.rs  misassembly.rs  peak.rs  pileup.rs  utils.rs
test/dupes/: aln_1.bam  aln_2.bed  aln_3.bam  aln_3.bam.bai
test/ending_scaffold/: aln_1.bam
test/hsat/: aln_1.bam  aln_1.bam.bai  aln_1.bed
test/minor_collapse/: aln_2.bam.bai  aln_2.bed  aln_3.bam  aln_4.bam  aln_4.bam.bai  aln_4.bed
(+36 files in other folders)
