[package]
name = "rs-nucflag"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
coitrees = "0.4.0"
eyre = "0.6.12"
itertools = "0.14.0"
log = "0.4.25"
noodles = { version = "0.91.0", features = ["bam", "bgzf", "core", "sam"] }
plotters = "0.3.7"
polars = { version = "0.46.0", features = ["abs", "dtype-u8", "lazy", "rank", "rolling_window", "round_series"] }
simple_logger = { version = "5.0.0", features = ["stderr"] }
