[package]
name = "x"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.32"
coitrees = "0.4.0"
eyre = "0.6.12"
itertools = "0.14.0"
log = "0.4.26"
noodles = { version = "0.91.0", features = ["bam"] }
nucflag = { path = "../core"}
polars = "0.46.0"
rayon = "1.10.0"
simple_logger = "5.0.0"
